--- a/docker-compose v1.yaml
+++ b/docker-compose v1.yaml
@@ -4,5 +4,7 @@ services:
     build: .
     ports:
       - "3000:3000"
-    environment:
-      - PORT=3000
+    volumes:
+      - /app/node_modules
+      - ./:/app:ro
+
