--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -12,6 +12,7 @@ services:
       - NODE_ENV=development
       - MONGO_USER=admin
       - MONGO_PASSWORD=admin
+      - SESSION_SECRET=secretData
     command: npm run dev
 
   mongodb:
