--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     environment:
       - PORT=3000
     networks:
-      - mongonet
+      - nodenet
     depends_on:
       - mongodb
   mongodb:
@@ -19,7 +19,7 @@ services:
     # volumes:
     #   - ./data:/data/db
     networks:
-      - mongonet
+      - nodenet
     environment:
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=admin
@@ -41,20 +41,24 @@ services:
     ports:
       - "0.0.0.0:8081:8081"
     networks:
-      - mongonet
+      - nodenet
     depends_on:
       - mongodb
 
   redis:
     image: redis
+    container_name: redis
+    # ports:
+    #   - "6379:6379"
     networks:
-      - mongonet
+      - nodenet
     # depends_on:
     #   - mongodb
 
 networks:
-  mongonet:
-    name: mongonet
+  nodenet:
+    name: nodenet
+    # driver: bridge
 
 volumes:
   mongo_data:
